# goldilocks-ntt-hdl-x402

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  wrangler.toml
programs/donor-registry/: Cargo.toml
programs/donor-registry/src/: lib.rs
programs/pricing-schedule/: Cargo.toml
programs/pricing-schedule/src/: lib.rs
programs/receipt-registry/: Cargo.toml
programs/receipt-registry/src/: lib.rs
scripts/: build-verilator-wasm.sh
tools/test-client/: README.md  package-lock.json  package.json  test-paid-call.ts  tsconfig.json
worker/: Cargo.toml  wrangler.toml
worker/src/: backend.rs  edge.rs  error.rs  faucet.rs  handler.rs  lib.rs  quote.rs  registry.rs  types.rs  x402.rs
