[package]
name = "ntt-x402-worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "x402-gated NTT compute service: Cloudflare Workers entry point with Verilator-WASM backend, Solana-devnet receipt registry, and Solana-mainnet USDC settlement via the CDP facilitator."
readme = "../README.md"

[lints]
workspace = true

[dependencies]
comp-cat-rs = { path = "../../comp-cat-rs" }

[lib]
crate-type = ["cdylib", "rlib"]
