[package]
name = "ntt-x402-worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "x402-gated NTT compute service: Cloudflare Workers entry point with Verilator-WASM backend, Solana-devnet receipt registry, and Solana-mainnet USDC settlement via the CDP facilitator."
readme = "../README.md"

[lints]
workspace = true

[dependencies]
comp-cat-rs = { path = "../../comp-cat-rs" }
p3-field = "0.5"
p3-goldilocks = "0.5"
sha2 = { version = "0.11", default-features = false }
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

# Cloudflare Workers runtime is only present on the wasm32 target so
# `cargo check` on the host (macOS, Linux) keeps working for unit
# tests of the Io-pure core.  Building for deploy is done by
# `worker-build --release`, which sets the target to
# `wasm32-unknown-unknown` automatically.
[target.'cfg(target_arch = "wasm32")'.dependencies]
worker = "0.8"
console_error_panic_hook = "0.1"

[lib]
crate-type = ["cdylib", "rlib"]
