[package]
name = "pricing-schedule"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Solana-devnet program holding the immutable pricing tier schedule for goldilocks-ntt-hdl-x402."

[lib]
crate-type = ["cdylib", "lib"]
name = "pricing_schedule"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
